src/objects/Asset.object
<CustomObject>
    <fields>
        <fullName>Active_Tag__c</fullName>
        <inlineHelpText>Short description of this asset for entry/update by TRC analyst.</inlineHelpText>
        <label>Active Tag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Warranty_End_Date__c</fullName>
        <inlineHelpText>What is the Actual Warranty End Date?</inlineHelpText>
        <label>Actual Warranty End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Warranty_Start_Date__c</fullName>
        <inlineHelpText>What is the Actual Warranty Start Date?</inlineHelpText>
        <label>Actual Warranty Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Address_Line_3__c</fullName>
        <formula>Asset_Address__r.Address_Line_3__c</formula>
        <label>Address Line 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_4__c</fullName>
        <formula>Asset_Address__r.Address_Line_4__c</formula>
        <label>Address Line 4</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Address_Line_1__c</fullName>
        <formula>Asset_Address__r.Address_Line_1__c</formula>
        <label>Address Line 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Address_Line_2__c</fullName>
        <formula>Asset_Address__r.Address_Line_2__c</formula>
        <label>Address Line 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Address</label>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Asset_City__c</fullName>
        <formula>Asset_Address__r.City__c</formula>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Country_ISO_Code__c</fullName>
        <formula>Asset_Address__r.Country_ISO_Code__c</formula>
        <label>Country ISO Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Country__c</fullName>
        <formula>Text(Asset_Address__r.Country__c)</formula>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Number__c</fullName>
        <displayFormat>{00000000}</displayFormat>
        <label>Asset Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Asset_Postal_Code__c</fullName>
        <formula>Asset_Address__r.Postal_Code__c</formula>
        <label>Zip/Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_State_ISO_Code__c</fullName>
        <formula>Asset_Address__r.State_Province_ISO_Code__c</formula>
        <label>State/Province ISO Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_State_Province__c</fullName>
        <formula>Text(Asset_Address__r.State_Province__c)</formula>
        <label>State/Province</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bypass__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field used to disable triggers or validation rules firing.
Note: For bulk loading data from a script, the trigger assumes all records in the list have this field set to true.</description>
        <inlineHelpText>Field used to disable triggers or validation rules firing.
Note: For bulk loading data from a script, the trigger assumes all records in the list have this field set to true.</inlineHelpText>
        <label>Bypass</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Code_String_Breakdown__c</fullName>
        <description>Display Breakdown of code string. Raw data pulled from Data Warehouse then transformed and compiled in the SFDC Integration dba prior to load here.</description>
        <label>Code String Breakdown</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Code_String__c</fullName>
        <label>Code String</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Commissioned__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>IE Use Only. If checked, the initial Gateway for this asset has been commissioned.</inlineHelpText>
        <label>Gateway Commissioned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Competitor_Model__c</fullName>
        <inlineHelpText>Enter the Competitor Model # if this is a competitor&apos;s piece of equipment.</inlineHelpText>
        <label>Competitor Model</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Code_String_Breakdown__c</fullName>
        <description>Displays breakdown of code string with any modifications since Raw data was pulled from Data Warehouse (Code_String_Breakdown__c)</description>
        <label>Current Code String Breakdown</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_PO_Number__c</fullName>
        <formula>Order__r.Customer_PO_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer PO Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DW_Product_Line__c</fullName>
        <description>DW Product Line from the Product</description>
        <formula>Product2.DW_Product_Line__c</formula>
        <inlineHelpText>DW Product Line from the Product</inlineHelpText>
        <label>DW Product Line</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device_ID__c</fullName>
        <formula>IF (MAC_Address__c &lt;&gt; null, (&quot;00000000-00000000-&quot; &amp;  UPPER(LEFT( MAC_Address__c, 6)) &amp; &quot;FF-FF&quot; &amp;  UPPER(RIGHT(MAC_Address__c, 6))), &quot;&quot;)</formula>
        <inlineHelpText>Etherios Device ID passed to IE web service as MACAddress</inlineHelpText>
        <label>Device ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equipment_Description__c</fullName>
        <description>DW PCL Description of the Product</description>
        <formula>Product2.DW_PCL_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>DW PCL Description of the Product</inlineHelpText>
        <label>Equipment Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Format_Number__c</fullName>
        <description>DW_McQuayDataWarehouse.dbo.DW_DIM_CODE_STRING.DCST_FORMAT</description>
        <label>Format Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Address__c</fullName>
        <formula>Asset_Address_Line_1__c &amp; &quot; &quot;&amp; if(Asset_Address_Line_2__c != &quot;&quot;,Asset_Address_Line_2__c&amp;&quot; &quot;,&quot;&quot;)&amp;
Asset_City__c &amp; &quot;, &quot; &amp;
Asset_State_Province__c &amp; &quot; &quot; &amp;
Asset_Postal_Code__c &amp;&quot; &quot;&amp;
Asset_Country__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GO_Line_Number__c</fullName>
        <description>Used to indicate the General Order Line number assigned to the Asset</description>
        <label>GO Line Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GO_Number__c</fullName>
        <formula>Order__r.GO_Number__c</formula>
        <label>GO Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GWotGo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Gateway on the Go 
Checked if the IE Gateway is a Gateway on the Go asset</description>
        <inlineHelpText>Gateway on the Go 
Checked if the IE Gateway is a Gateway on the Go asset</inlineHelpText>
        <label>GWotGo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gateway_Commissioned_Date__c</fullName>
        <label>Gateway Commissioned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>General_Contractor_Name__c</fullName>
        <formula>Order__r.General_Contractor_Name__c</formula>
        <label>General Contractor Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Maintenance_Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, this should contain a maintenance agreement</description>
        <inlineHelpText>When checked, this should contain a maintenance agreement</inlineHelpText>
        <label>Has Maintenance Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IE_Asset__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to indicate the record pertains to the IE integration. This is set on import of record from Daikin IE Back Office database.</description>
        <inlineHelpText>Flag to indicate the record pertains to the IE integration. This is set on import of record from Daikin IE Back Office database.</inlineHelpText>
        <label>IE Asset</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IE_ID__c</fullName>
        <externalId>true</externalId>
        <label>IE ID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IE_Retrofit__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, an IE Retrofit Kit was ordered for this asset.</inlineHelpText>
        <label>IE Retrofit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IE_Sync_Status__c</fullName>
        <description>Status that gets set when attributes on the record are updated and therefore needs to be sent to the IE system.</description>
        <inlineHelpText>Pending = Record needs to be sent to the IE system. 
Processed = Record was successfully received by IE system. 
Error = Record was not successfully received by IE system.</inlineHelpText>
        <label>IE Sync Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Processed</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IE_Updated_Date__c</fullName>
        <description>IE system date for when the record was last updated in the IE database.</description>
        <inlineHelpText>IE system date for when the record was last updated in the IE database.</inlineHelpText>
        <label>IE Updated Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Install_City__c</fullName>
        <description>Install City</description>
        <inlineHelpText>Install City</inlineHelpText>
        <label>Install City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Install_Country__c</fullName>
        <description>Install Country</description>
        <inlineHelpText>Install Country</inlineHelpText>
        <label>Install Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Bahamas, The</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bonaire</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Cayman Islands</fullName>
                </value>
                <value>
                    <fullName>Chile</fullName>
                </value>
                <value>
                    <fullName>Colombia</fullName>
                </value>
                <value>
                    <fullName>Costa Rica</fullName>
                </value>
                <value>
                    <fullName>Cuba</fullName>
                </value>
                <value>
                    <fullName>Curacao</fullName>
                </value>
                <value>
                    <fullName>Dominica</fullName>
                </value>
                <value>
                    <fullName>Dominican Republic</fullName>
                </value>
                <value>
                    <fullName>Ecuador</fullName>
                </value>
                <value>
                    <fullName>El Salvador</fullName>
                </value>
                <value>
                    <fullName>Grenada</fullName>
                </value>
                <value>
                    <fullName>Guatemala</fullName>
                </value>
                <value>
                    <fullName>Guyana</fullName>
                </value>
                <value>
                    <fullName>Haiti</fullName>
                </value>
                <value>
                    <fullName>Honduras</fullName>
                </value>
                <value>
                    <fullName>Jamaica</fullName>
                </value>
                <value>
                    <fullName>Mexico</fullName>
                </value>
                <value>
                    <fullName>Nicaragua</fullName>
                </value>
                <value>
                    <fullName>Not Available</fullName>
                </value>
                <value>
                    <fullName>Panama</fullName>
                </value>
                <value>
                    <fullName>Paraguay</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Install_State__c</fullName>
        <description>Install State</description>
        <inlineHelpText>Install State</inlineHelpText>
        <label>Install State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Install_Street__c</fullName>
        <description>Install Street</description>
        <inlineHelpText>Install Street</inlineHelpText>
        <label>Install Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Install_ZIP_Postal_Code__c</fullName>
        <description>Install ZIP/Postal Code</description>
        <inlineHelpText>Install ZIP/Postal Code</inlineHelpText>
        <label>Install Zip/Postal Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installer_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Company who installed the asset.</inlineHelpText>
        <label>Installer Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Assets (Installer)</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Intel_ID__c</fullName>
        <label>Intel ID</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Intel_Operator__c</fullName>
        <defaultValue>&quot;Daikin&quot;</defaultValue>
        <label>Intel Operator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Name__c</fullName>
        <formula>Order__r.Job_Name__c</formula>
        <label>Job Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MAC_Address__c</fullName>
        <description>Only applicable for IE Assets.  This is the MAC Address for the IE hardware on the asset.</description>
        <inlineHelpText>Only applicable for IE Assets.  This is the MAC Address for the IE hardware on the asset.</inlineHelpText>
        <label>MAC Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_Type__c</fullName>
        <formula>Text(Product2.Model_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Model Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_temp__c</fullName>
        <label>Model (temp)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Number__c</fullName>
        <formula>Opportunity__r.Latin_America_Opportunity_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Opportunity</description>
        <inlineHelpText>Opportunity</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>SFDC Order record unique Id number. Auto-generated within SFDC.</inlineHelpText>
        <label>Order ID</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Owner_Name__c</fullName>
        <formula>Account.Account_Owner_Name__c</formula>
        <label>Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Equipment that this Asset is controlling or tied to.</inlineHelpText>
        <label>Parent Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Related Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Class__c</fullName>
        <description>DW_McQuayDataWarehouse.dbo.DW_DIM_CODE_STRING.DCST_PCL</description>
        <label>Product Class</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <description>Product Description</description>
        <formula>Product2.Description</formula>
        <inlineHelpText>Product Description</inlineHelpText>
        <label>Product Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recommended_Warranty_End_Date__c</fullName>
        <description>Captures 12 month from the Recommended Warranty Start Date</description>
        <formula>ADDMONTHS( Recommended_Warranty_Start_Date__c ,12)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated as 12 months from the Recommended Warranty Start Date</inlineHelpText>
        <label>Recommended Warranty End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Recommended_Warranty_Start_Date__c</fullName>
        <description>Formula field captures Warranty Start Date definitions in order to be populated in a date field that would allow for manual overwrite. If Startup date is populated, this date is the Recommended Start Date, otherwise it will be the Ship Date.</description>
        <formula>IF(NOT(ISBLANK(Startup_Date__c)), Startup_Date__c, Ship_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If the Startup Date is populated that is this date, otherwise it will be the Ship Date.  If the Startup Date is not populated it&apos;s because we have not received the startup form.</inlineHelpText>
        <label>Recommended Warranty Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Record_Usage__c</fullName>
        <description>Designed to show other systems that use the information in this record and for the purpose of preventing record deletion.</description>
        <label>Record Usage</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DW</fullName>
                </value>
                <value>
                    <fullName>IE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rep_PO_Number__c</fullName>
        <formula>Order__r.Rep_PO_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rep PO Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResetSuccessful__c</fullName>
        <description>Status field that gets set for a GWotGo Reset operation. 
None - Initialized state 
True - Reset operation was successful 
False - Reset Operation failed</description>
        <inlineHelpText>Status field that gets set for a GWotGo Reset operation. 
None - Initialized state 
True - Reset operation was successful 
False - Reset Operation failed</inlineHelpText>
        <label>ResetSuccessful</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>True</fullName>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SIM_Card_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to determine if the SIM card is active or not.</description>
        <label>SIM Card Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SIM_Card_ICCID__c</fullName>
        <description>Only applicable for IE Assets. This is for the IE hardware on the asset.</description>
        <inlineHelpText>Only applicable for IE Assets. This is for the IE hardware on the asset.</inlineHelpText>
        <label>SIM Card ICCID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Line_Number__c</fullName>
        <description>Used to indicate the Sales Order Line number associated to the Asset</description>
        <label>SO Line Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Number__c</fullName>
        <formula>Order__r.SO_Number__c</formula>
        <label>SO Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesperson__c</fullName>
        <formula>Order__r.Salesperson__r.FirstName &amp; &quot; &quot; &amp; Order__r.Salesperson__r.LastName</formula>
        <label>Salesperson</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selling_Rep_Office__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Selling Rep Office</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Assets (Selling Rep Office)</relationshipLabel>
        <relationshipName>Assets_SellingRep</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Selling_Rep_Office_temp__c</fullName>
        <inlineHelpText>Temporary placeholder for src_dw_fact_shipment.DCW_Sales_Office_Number so we can generate a lookup relationship to the Selling Rep Office Account once the DCW data is loaded.</inlineHelpText>
        <label>Selling Rep Office (temp)</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Serial_Number_ID__c</fullName>
        <externalId>true</externalId>
        <label>Serial Number ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Servicer_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Current servicing company for the asset.</inlineHelpText>
        <label>Servicer Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Assets (Servicer)</relationshipLabel>
        <relationshipName>Assets1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ship_Date__c</fullName>
        <label>Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ship_To_Address_Line_1__c</fullName>
        <label>Ship To Address Line 1</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Address_Line_2__c</fullName>
        <label>Ship To Address Line 2</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Address_Line_3__c</fullName>
        <label>Ship To Address Line 3</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_City__c</fullName>
        <label>Ship To City</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Country__c</fullName>
        <label>Ship To Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_County__c</fullName>
        <label>Ship To County</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Name__c</fullName>
        <label>Ship To Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Postal_Code__c</fullName>
        <label>Ship To Postal Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_State_Province__c</fullName>
        <label>Ship To State/Province</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Startup_Date__c</fullName>
        <description>Startup Date</description>
        <inlineHelpText>Startup Date</inlineHelpText>
        <label>Startup Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Supplier_PO_Number__c</fullName>
        <description>Vendor/Supplier PO #</description>
        <inlineHelpText>Vendor/Supplier PO #</inlineHelpText>
        <label>Supplier PO #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <formula>Product2.Vendor_Supplier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Supplier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tag__c</fullName>
        <inlineHelpText>Description entered by Sales Rep when selecting the product in Daikin Tools.</inlineHelpText>
        <label>Order Tag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warehouse_ID__c</fullName>
        <description>src_dw_fact_shipment.dw_Shipments_Key</description>
        <externalId>true</externalId>
        <inlineHelpText>src_dw_fact_shipment.dw_Shipments_Key</inlineHelpText>
        <label>Warehouse ID</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warehouse_Product_ID__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>DW_FACT_SHIPMENTS.FS_PRODUCT_KEY</inlineHelpText>
        <label>Warehouse Product ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warranty_Expiration_Date__c</fullName>
        <description>Warranty Expiration Date</description>
        <inlineHelpText>Warranty Expiration Date</inlineHelpText>
        <label>Warranty Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Warranty_Items__c</fullName>
        <label>Warranty Items</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <listViews>
        <fullName>AllAssets</fullName>
        <columns>ASSET.NAME</columns>
        <columns>ASSET.SERIAL_NUMBER</columns>
        <columns>ASSET.INSTALL_DATE</columns>
        <columns>ASSET.CREATED_DATE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.NAME</columns>
        <columns>PRODUCT2.NAME</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Assets</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>DWAssets</fullName>
        <columns>ASSET.NAME</columns>
        <columns>ASSET.SERIAL_NUMBER</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>Ship_Date__c</columns>
        <columns>Order__c</columns>
        <columns>SO_Line_Number__c</columns>
        <columns>GO_Line_Number__c</columns>
        <columns>Asset_Address__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>equals</operation>
            <value>FUTURE ASSET OWNER ACCOUNT</value>
        </filters>
        <filters>
            <field>Order__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>DW Asset Import</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>DWAssets_TEST</fullName>
        <columns>ASSET.NAME</columns>
        <columns>ASSET.SERIAL_NUMBER</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>Ship_Date__c</columns>
        <columns>Order__c</columns>
        <columns>SO_Line_Number__c</columns>
        <columns>GO_Line_Number__c</columns>
        <columns>Asset_Address__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>equals</operation>
            <value>FUTURE ASSET OWNER ACCOUNT</value>
        </filters>
        <filters>
            <field>Tag__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>DW Asset Import TEST</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>IE_Assets</fullName>
        <columns>Job_Name__c</columns>
        <columns>ASSET.NAME</columns>
        <columns>ASSET.SERIAL_NUMBER</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>Ship_Date__c</columns>
        <columns>Order__c</columns>
        <columns>SO_Number__c</columns>
        <columns>SO_Line_Number__c</columns>
        <columns>IE_Asset__c</columns>
        <columns>IE_ID__c</columns>
        <columns>IE_Retrofit__c</columns>
        <columns>IE_Sync_Status__c</columns>
        <columns>IE_Updated_Date__c</columns>
        <columns>ASSET.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IE_Asset__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>IE Assets</label>
        <language>en_US</language>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Install_Date_Validation_Rule</fullName>
        <active>true</active>
        <description>Ensures that an Install Date is specified for items listed as Installed.</description>
        <errorConditionFormula>ISPICKVAL(Status, &quot;Installed&quot;) &amp;&amp;  TEXT(InstallDate) = &quot;&quot;</errorConditionFormula>
        <errorMessage>Please specify an Install Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Install_Location_Validation</fullName>
        <active>true</active>
        <description>Ensures that an Install Location is specified for Installed items.</description>
        <errorConditionFormula>ISPICKVAL(Status,&quot;Installed&quot;) &amp;&amp; TEXT(Install_Country__c) = &quot;&quot;</errorConditionFormula>
        <errorMessage>Please specify installation location details.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Purchase_Date_Validation</fullName>
        <active>true</active>
        <description>Ensures that a Purchase Date is specified for items listed as Shipped.</description>
        <errorConditionFormula>ISPICKVAL(Status, &quot;Purchased&quot;) &amp;&amp;  TEXT(PurchaseDate) = &quot;&quot;</errorConditionFormula>
        <errorMessage>Please specify a Purchase Date.</errorMessage>
    </validationRules>
</CustomObject>